# Loopdedo

./: .gitignore  pyproject.toml
loopdedo/: dbo.py  main.py
loopdedo/web/: style.css  style.scss  todo.html  todo.js
