[project]
name = "Loopdedo"
description = "Loop scheduling to-do tracker."
version = "0.1"
authors = [{name="Jeff Shipley", email="jshipley@fastmail.fm"}]
dependencies = [
	"flask",
	"peewee"
]
requires-python = ">= 3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
	"mypy",
	"pylint",
	"ruff",
	"pytest",
]